--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -7,10 +7,12 @@
     tools:context=".ui.main.ListerFragment"
     android:orientation="horizontal">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <!--<androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        tools:listitem="@layout/card_template"/>
+        tools:listitem="@layout/card_template"/>-->
+
+    <include layout="@layout/card_template"/>
 
 </LinearLayout>
