--- a/app/src/main/res/layout/card_template.xml
+++ b/app/src/main/res/layout/card_template.xml
@@ -2,38 +2,43 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="10dp"
     android:layout_margin="5dp">
 
     <LinearLayout
-        android:id="@+id/full_card"
+        android:id="@+id/full_card_template"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/image"
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/doge" />
-
+            app:cardCornerRadius="@dimen/cardCorner">
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/doge" />
+        </androidx.cardview.widget.CardView>
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/title_template"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Title" />
 
         <TextView
-            android:id="@+id/description"
+            android:maxLines="2"
+            android:maxLength="20"
+            android:id="@+id/description_template"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             tools:text="Description" />
 
         <TextView
-            android:id="@+id/rate"
+            android:id="@+id/rate_template"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
