--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -8,6 +8,14 @@
     tools:context=".ui.main.mainScreen.ListerFragment"
     android:orientation="horizontal">
 
+    <Button
+        android:id="@+id/loadButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LoadData"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_adventure" />
     <androidx.recyclerview.widget.RecyclerView
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="horizontal"
@@ -25,6 +33,7 @@
         android:background="@color/loadingBackground"
         android:visibility="gone"
         tools:visibility="visible">
+
 
         <ProgressBar
             style="?android:attr/progressBarStyleLarge"
