Реализована загрузка 2 разных жанров в 2 разных рекуклера :)

--- a/app/src/main/res/layout/card_template.xml
+++ b/app/src/main/res/layout/card_template.xml
@@ -23,6 +23,7 @@
                 android:src="@drawable/doge" />
         </androidx.cardview.widget.CardView>
         <TextView
+            android:maxLength="20"
             android:id="@+id/title_template"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
