--- a/app/src/main/res/layout/card_template.xml
+++ b/app/src/main/res/layout/card_template.xml
@@ -13,11 +13,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <androidx.cardview.widget.CardView
+            android:id="@+id/card4img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:cardCornerRadius="@dimen/cardCorner">
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/image"
+                android:id="@+id/imageCard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/doge" />
