--- a/app/src/main/res/layout/card_template.xml
+++ b/app/src/main/res/layout/card_template.xml
@@ -5,7 +5,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:cardCornerRadius="10dp"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    app:cardBackgroundColor="@android:color/transparent">
 
     <LinearLayout
         android:id="@+id/full_card_template"
