--- a/app/src/main/res/layout/loading_layout.xml
+++ b/app/src/main/res/layout/loading_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/loadingBackground"
-    android:visibility="gone"
+    android:visibility="visible"
     tools:visibility="visible">
 
     <ProgressBar
