--- a/app/src/main/res/layout/gmap_frag.xml
+++ b/app/src/main/res/layout/gmap_frag.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="Новосибирск"
-        android:text="Новосибирск" />
+        android:text="Москва, Красная площадь 1" />
 
     <LinearLayout
         android:layout_width="match_parent"
